build(core): harden API encapsulation, standardize exceptions, and elevate fuzz testing for 1.0.0
    This commit finalizes the core architecture for the 1.0.0 release by
    locking down internal abstractions, aligning with standard Java
    conventions, and significantly strengthening the test suite.

    API Encapsulation:
    * Moved all concrete node classes (e.g., RBTNode, BPlusTreeNode) directly
      into their engine packages and stripped the 'public' modifier.
    * Internal tree mechanics are now strictly package-private, fully closing
      the classpath leak and preventing external mutation of node states.

    Standardized Exceptions:
    * Re-parented DuplicateNodeException to extend IllegalArgumentException.
    * Re-parented EmptyTreeException and NodeNotFoundException to extend
      NoSuchElementException.
    * Enables seamless integration with existing algorithms that expect standard
      Collection API errors.

    Testing Enhancements (FuzzTest.java):
    * Added custom 'DataPacket' objects to aggressively fuzz natural ordering,
      specifically forcing massive compareTo() == 0 collisions.
    * Added deep sequential stress tests (100k elements for binary, 1 million
      for N-ary) to prove resilience against O(N) stack overflows and array
      growth bottlenecks under worst-case insertion patterns.
    * Total test count expanded to 579 passing tests.